<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.geekbang.projects</groupId>
    <artifactId>user-platform</artifactId>
    <name>User Platform ${revision}</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>my-web-mvc</module>
        <module>user-web</module>
    </modules>

    <properties>
        <revision>v1-SNAPSHOT</revision>
        <file.encoding>UTF-8</file.encoding>
        <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>

        <!-- Artifacts 依赖版本 -->
        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
        <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
        <jstl.version>1.2</jstl.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-validator.version>1.7</commons-validator.version>
        <commons-configuration.version>1.10</commons-configuration.version>
        <derby.version>10.14.1.0</derby.version>
        <hibernate.version>5.4.29.Final</hibernate.version>
        <hibernate.validator.version>6.1.7.Final</hibernate.validator.version>

        <!-- MicroProfile 版本-->
        <microprofile-config-api.version>2.0</microprofile-config-api.version>

        <jolokia-core.version>1.6.2</jolokia-core.version>
        <jolokia-client-java.version>1.6.2</jolokia-client-java.version>

        <!-- Maven Plugins 版本 -->
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.source.version>3.2.1</maven.source.version>
        <maven.jar.version>3.2.0</maven.jar.version>
        <maven.war.version>3.3.1</maven.war.version>
        <maven.deploy.version>2.8.2</maven.deploy.version>
        <maven.flatten.version>1.2.5</maven.flatten.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <!-- Artifacts 依赖版本管理 -->
    <dependencyManagement>

        <dependencies>
            <!-- Servlet 3.1 API -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${javax.servlet-api.version}</version>
            </dependency>

            <!-- JAX-RS API -->
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>${javax.ws.rs-api.version}</version>
            </dependency>

            <!-- JSTL -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>jstl</artifactId>
                <version>${jstl.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validator.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-configuration</groupId>
                <artifactId>commons-configuration</artifactId>
                <version>${commons-configuration.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.derby</groupId>
                <artifactId>derby</artifactId>
                <version>${derby.version}</version>
            </dependency>

            <!-- Hibernate ORM Core -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- Hibernate JPA support -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- Hibernate Validator -->
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate.validator.version}</version>
            </dependency>

            <!-- MicroProfile -->
            <dependency>
                <groupId>org.eclipse.microprofile.config</groupId>
                <artifactId>microprofile-config-api</artifactId>
                <version>${microprofile-config-api.version}</version>
            </dependency>

            <dependency>
            <groupId>org.jolokia</groupId>
            <artifactId>jolokia-core</artifactId>
            <version>${jolokia-core.version}</version>
        </dependency>

            <dependency>
                <groupId>org.jolokia</groupId>
                <artifactId>jolokia-client-java</artifactId>
                <version>${jolokia-client-java.version}</version>
            </dependency>

        </dependencies>

    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven.deploy.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.1</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.derby</groupId>
                            <artifactId>derby</artifactId>
                            <version>${derby.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>tomcat-run</id>
                            <goals>
                                <!-- 最终打包成可执行的jar包 -->
                                <goal>exec-war-only</goal>
                            </goals>
                            <phase>package</phase>
                            <configuration>
                                <!-- ServletContext 路径 -->
                                <path>/</path>
                                <enableNaming>true</enableNaming>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
<!--                <plugin>-->
<!--                    <groupId>org.apache.tomcat.maven</groupId>-->
<!--                    <artifactId>tomcat8-maven-plugin</artifactId>-->
<!--                    <version>3.0-r1756463</version>-->
<!--                    <executions>-->
<!--                        <execution>-->
<!--                            <id>tomcat-run</id>-->
<!--                            <goals>-->
<!--                                &lt;!&ndash; 最终打包成可执行的jar包 &ndash;&gt;-->
<!--                                <goal>exec-war-only</goal>-->
<!--                            </goals>-->
<!--                            <phase>package</phase>-->
<!--                            <configuration>-->
<!--                                &lt;!&ndash; ServletContext 路径 &ndash;&gt;-->
<!--                                <path>/</path>-->
<!--                            </configuration>-->
<!--                        </execution>-->
<!--                    </executions>-->
<!--                </plugin>-->
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <compilerArgs>
                        <compilerArg>-proc:none</compilerArg>
                        <compilerArg>-parameters</compilerArg>
                    </compilerArgs>
                    <fork>true</fork>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${file.encoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${maven.flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>